--- a/css/modal.css
+++ b/css/modal.css
@@ -1,3 +1,13 @@
+.errorModal {
+  position: absolute;
+  width: 350px;
+  height: 350px;
+  left: 221px;
+  top: 132px;
+  background: #F2F0F9;
+  box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.25);
+}
+
 .modal {
   background: #F2F0F9;
   box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.25);
@@ -23,7 +33,33 @@
   text-transform: uppercase;
 }
 
-.modal__close {
+.someThingWrong {
+  /* Что-то пошло не так */
+  position: absolute;
+  width: 253px;
+  height: 22px;
+  left: 48px;
+  top: 232px;
+
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 22px;
+  /* identical to box height */
+
+  letter-spacing: 0.1em;
+  text-transform: uppercase;
+
+  /* Fonts/Primary Variant */
+
+  color: #6E6893;
+}
+
+.modal__close,
+.modalDelete__close,
+.modalEdit__close,
+.errorModal__close {
   position: absolute;
   top: 20px;
   right: 30px;
